2010-01-20  vadim  <vadim@vk.crocodile.org>

	* clusterMembersDialog.cpp (clusterMembersDialog::getSelectedMembers):
	fixes #1117 "failover group member editor loses interfaces". If
	failover group included vlan interfaces of the member firewalls,
	the dialog that appears when user clicks on "manage members"
	button would not show members at all.

	* NATCompiler_pix.cpp (NATCompiler_pix::_expand_interface): fixes
	#1115: "fwb_pix crash compiling cluster NAT rule set with
	interface in TSrc". A cluster interface was used in the TSrc rule
	element of a NAT rule. Cluster interfaces of PIX cluster have no
	ip addresses of their own (PIX HA pair uses ip addresses of the
	master unit), this caused rule element to become empty after
	interface object was supposed to be replaced with its ip address.

2010-01-19  vadim  <vadim@vk.crocodile.org>

	* ../src/cisco_lib/NATCompiler_pix.cpp (NATCompiler_pix::compile):
	fixes #1108: fwb_pix: incorrect access list is generated for
	"static". When a firewall or host object with an interface that
	was configured with netmask that was not
	255.255.255.255 (i.e. configured correctly) was used in TDst of a
	NAT rule for PIX firewall, compiler generated configuration that
	used subnet instead of just the address of the inetrface.

	* (NATCompiler_pix::_expand_interface): reimplemented virtual
	method Compiler::_expand_interface() to process cluster
	interfaces. Using member interface instead of the cluster
	interface while compiling the rule.

	* (createNATCmd::processNext): fixes #1114: "fwb_pix crash when fw
	with dynamic interface is used in TDst".

	* ../src/iptlib/NATCompiler_ipt.cpp (VerifyRules2::processNext):
	fixes #1109: "rules that do not pass verifyRules() checks may
	cause compiler crash in test mode or gui crash in single rule
	compile mode"

	* CompilerDriver.cpp (CompilerDriver::formSingleRuleCompileOutput):
	fixes #1110: "when compiler detects fatal error and drops the rule